Closed Bug 502522 Opened 15 years ago Closed 15 years ago

Password fields on Windows CE show asterisks instead of dots

Categories

(Core :: Widget: Win32, defect, P4)

ARM
Windows CE
defect

Tracking

()

VERIFIED FIXED
mozilla1.9.2a1

People

(Reporter: Dolske, Assigned: Dolske)

Details

(Whiteboard: [nv])

Attachments

(1 file)

Password fields on Windows CE show "*****" instead of "●●●●●".

Firefox 2 used to work this way, we changed it in Firefox 3 (no bug # handy) to show the dots, which looks so much better.
Summary: Password fields on Windows CE show asterisks instead of dots on Windows CE → Password fields on Windows CE show asterisks instead of dots
Whiteboard: [nv]
Component: Widget → Widget: Win32
QA Contact: general → win32
Ah, yes. widget/src/windows/nsLookAndFeel.cpp:

662 PRUnichar nsLookAndFeel::GetPasswordCharacter()
663 {
664   static PRUnichar passwordCharacter = 0;
665   if (!passwordCharacter) {
666     passwordCharacter = '*';
667 #ifndef WINCE
668     if (nsUXThemeData::sIsXPOrLater)
669       passwordCharacter = 0x25cf;
670 #endif
671   }
672   return passwordCharacter;
673 }
Attached patch Patch v.1Splinter Review
Assignee: nobody → dolske
Attachment #387553 - Flags: review?(vladimir)
Comment on attachment 387553 [details] [diff] [review]
Patch v.1

Add a comment at the start of this saying what 0x25cf is -- better yet, add a #define that's something like UNICODE_BULLET_CHAR
Attachment #387553 - Flags: review?(vladimir) → review+
Pushed http://hg.mozilla.org/mozilla-central/rev/127912bf67eb
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Verified fix on Mozilla/5.0 (Windows; U; WindowsCE 6.0; en-US; rv:1.9.2a1pre)
Gecko/20090806 Minefield/3.6a1pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: