Bug 502522 - Password fields on Windows CE show asterisks instead of dots. r=vladimir